Plugin content not loaded. https://bugs.webkit.org/show_bug.cgi?id=140672

Patch by peavo@outlook.com <peavo@outlook.com> on 2015-01-20
Reviewed by Brent Fulgham.

It seems this is caused by a std::unique_ptr in CClass::methodNamed being moved,
resetting its raw pointer. The raw pointer, which now is null, is then returned
from the method.

* bridge/c/c_class.cpp:
(JSC::Bindings::CClass::methodNamed):
(JSC::Bindings::CClass::fieldNamed):

Canonical link: https://commits.webkit.org/158645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178716 268f45cc-cd09-0410-ab3c-d52691b4dbfc